<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.presentation.HomeUpdatesFragment"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvStatus"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:text="@string/status"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ivOverflowStatus"
        android:src="@drawable/overflow_black_23"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        android:id="@+id/ivProfileStatus"
        android:src="@drawable/filled_person_placeholder_30"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/ivProfileStatus"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileStatus"
        android:id="@+id/ivAddUpdates"
        android:src="@drawable/ouline_add_circle_23"
        android:layout_marginBottom="-10dp"
        android:layout_marginEnd="-10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ivProfileStatus"
        app:layout_constraintStart_toEndOf="@id/ivProfileStatus"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/my_status"
        android:textColor="@color/black"
        android:id="@+id/tvMyStatus"
        android:textSize="@dimen/_12ssp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMyStatus"
        app:layout_constraintStart_toEndOf="@id/ivProfileStatus"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/tap_to_add_status_update"
        android:textColor="@color/black_50"
        android:id="@+id/tvTapToAddStatus"
        android:textSize="@dimen/_11ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvNewUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileStatus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/viewedUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvNewUpdates"
        android:textColor="@color/black_50"
        android:text="@string/viewed_updates"
        android:drawableEnd="@drawable/filled_down_black_20"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvViewedUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewedUpdates"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mutedUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvViewedUpdates"
        android:textColor="@color/black_50"
        android:text="@string/muted_updates"
        android:drawableEnd="@drawable/filled_down_black_20"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvMutedUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mutedUpdates"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvMutedUpdates"
        android:background="@color/black_50"
        android:id="@+id/viewLine"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvChannels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/channels"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:drawableEnd="@drawable/filled_add_black_23"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvChannelsMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChannels"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/channels_msg_body"
        android:textColor="@color/black_50"
        android:textSize="@dimen/_12ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvChannels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChannelsMessage"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exploreMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvChannels"
        android:text="@string/explore_more"
        android:textColor="@color/white"
        android:background="@drawable/explore_more_background"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_7sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>